# fegora_media_creator

./: README.md  fmc.py  fmc.spec  pyproject.toml
fegora_media_creator/: disk_utils.py  local_storage.py  locale_setup.py  main.py  main_controller.py  main_window.py  server_interaction.py  size_utils.py
locale/cs/LC_MESSAGES/: messages.mo  messages.po
